Update Fig7 fixed-tree sweep (remove stars, widen y-lims)

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -462,7 +462,7 @@ We perform a fixed-tree hyperparameter sweep under the same evaluation protocol 
 \begin{figure}[t]
   \centering
   \includegraphics[width=\linewidth]{../figures/fixed_tree_sweep.pdf}
-  \caption{\textbf{Fixed-tree hyperparameter sweep under the paper protocol (WikiText-2, \(T=1500\)).} Speedup is computed relative to autoregressive decoding under the same setting. Stars indicate the best configuration observed in the sweep.}
+  \caption{\textbf{Fixed-tree hyperparameter sweep under the paper protocol (WikiText-2, \(T=1500\)).} Speedup is computed relative to autoregressive decoding under the same setting. Dashed boxes mark the best configuration observed in the sweep heatmaps; line plots use wider y-axis ranges for visual stability.}
   \label{fig:fixed-tree-sweep}
 \end{figure}
 
