--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -283,13 +283,13 @@ We compare against the following baselines under identical greedy decoding setti
 \begin{itemize}
   \item \textbf{Autoregressive (AR):} Standard greedy decoding with the target model, serving as the performance baseline.
   \item \textbf{Linear speculative decoding:} A linear-chain speculative decoder that drafts \(K\) tokens with the draft model and verifies them with the target model in parallel, committing the longest greedy-consistent prefix~\citep{leviathan2023fast}.
-  \item \textbf{Fixed Tree:} A static tree speculative decoder with fixed depth \(D\), fixed branching factor \(B\), and node budget \(N_{\max}\), representing a non-adaptive tree baseline.
+  \item \textbf{Fixed Tree:} A static tree speculative decoder with fixed depth \(D\), fixed branching factor \(B\), and node budget \(N_{\max}\), representing a non-adaptive tree baseline. The exact fixed-tree configuration can vary across datasets and analyses; we report the configuration used wherever results are shown.
   \item \textbf{DynaTree:} Our full method that augments the fixed-tree backbone with (i)~\emph{Dynamic Breadth}, (ii)~\emph{Dynamic Depth}, and (iii)~\emph{History Adaptation}. We ablate these components in Section~\ref{sec:ablation}.
 \end{itemize}
 
 \subsection{Main Results}
 \label{main-results}
-Table~\ref{tab:main-results} reports end-to-end throughput on WikiText-2 and PG-19 for \(T=1500\). DynaTree achieves the highest throughput on both datasets, improving over autoregressive decoding, linear speculative decoding, and a fixed-tree baseline. On WikiText-2, DynaTree reaches 219.5~t/s and outperforms a tuned static tree (200.7~t/s), indicating that allocating verification budget according to local model uncertainty can improve the draft--verify trade-off beyond a fixed configuration.
+Table~\ref{tab:main-results} reports end-to-end throughput on WikiText-2 and PG-19 for \(T=1500\). DynaTree achieves the highest throughput on both datasets, improving over autoregressive decoding, linear speculative decoding, and a fixed-tree baseline (with the static-tree configuration shown in the table). On WikiText-2, DynaTree reaches 219.5~t/s and outperforms a tuned static tree (200.7~t/s), indicating that allocating verification budget according to local model uncertainty can improve the draft--verify trade-off beyond a fixed configuration.
 
 \begin{table}[tbp]
 \centering
@@ -437,7 +437,7 @@ Unless stated otherwise, we use WikiText-2 prompts, truncate the prompt length t
 \paragraph{PG-19 setting.}
 For PG-19, we use the same model pair and greedy decoding, with a maximum prompt length \(L_{\max}=1000\).
 \paragraph{Fixed-tree baseline.}
-For the static-tree baseline, we use depth \(D=5\), branching factor \(B=2\), and a node budget \(N_{\max}=256\). We additionally report a fixed-tree hyperparameter sweep under the paper protocol in Appendix~\ref{app:additional-analyses} to verify that this baseline is reasonably tuned.
+We use a static-tree speculative decoder with a fixed \((D,B,\tau)\) configuration and node budget \(N_{\max}=256\). Since the paper includes multiple workloads (datasets and analysis sections), the fixed-tree configuration is not assumed to be identical everywhere; instead, we report the exact configuration used in each table/figure. For example, Table~\ref{tab:main-results} uses a tuned fixed tree (\(D=8,B=3,\tau=0.1\)), while the progressive ablation in Table~\ref{tab:ablation} uses a simpler fixed-tree backbone (\(D_0=5,B=2\)) for component attribution. We additionally report a fixed-tree hyperparameter sweep under the paper protocol in Appendix~\ref{app:additional-analyses} to verify that the static-tree baseline used in the main benchmark is reasonably tuned.
 \paragraph{DynaTree.}
 Unless stated otherwise, the adaptive configuration uses base depth \(D_0=5\), maximum depth \(D_{\max}=8\), branch bounds \((B_{\min},B_{\max})=(1,3)\), and confidence thresholds \((\tau_h,\tau_\ell)=(0.9,0.4)\). History Adaptation updates a small subset of these parameters based on recent verification outcomes.
 
