Polish Introduction and Related Work (NeurIPS style)

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -107,31 +107,29 @@
 
 
 \begin{abstract}
-Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a tree-based speculative decoding framework with \emph{confidence-aware adaptive branching} that dynamically adjusts tree structure based on draft model uncertainty through adaptive per-node branching, dynamic depth control, and history-based adjustment, combined with probability-threshold pruning under an explicit node budget. Experiments on Pythia models show that DynaTree reaches 218.5~tokens/s on WikiText-2 (1.65$\times$ speedup) and improves throughput over a fixed-tree baseline by 16.2\%, while consistently outperforming linear speculative decoding across both WikiText-2 and PG-19.
+Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches often employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a training-free tree-based speculative decoding framework with \emph{confidence-aware} adaptive drafting that dynamically adjusts tree breadth and depth under an explicit node budget, combined with probability-threshold pruning. Experiments with Pythia-2.8B (target) and Pythia-70M (draft) show that DynaTree improves throughput over autoregressive decoding, linear speculative decoding, and tuned fixed-tree baselines on both WikiText-2 and PG-19. At \(T=1500\), DynaTree reaches 219.5~tokens/s on WikiText-2 (1.64$\times$) and 194.9~tokens/s on PG-19 (1.70$\times$).
 \end{abstract}
 
 
 \section{Introduction}
 
-Large language models (LLMs) are typically deployed with autoregressive decoding, where each output token is generated after conditioning on all previously generated tokens. While transformer inference can exploit parallelism during the prefill stage, the decode stage remains inherently sequential and requires a full forward pass per token, leading to poor hardware utilization and high latency~\cite{flashattention,vllm}.
+Autoregressive decoding remains the default generation mode for large language models (LLMs), but it is inherently sequential: each token requires a forward pass conditioned on the full prefix. While transformer inference can exploit parallelism during prefill, the decode stage offers limited parallelism and is often bottlenecked by memory traffic and per-token kernel launch overhead~\cite{flashattention,vllm}.
 
-Speculative decoding alleviates this bottleneck by separating \emph{proposal} and \emph{verification}~\cite{leviathan2023fast}. A small draft model proposes several candidate tokens, and the target model verifies them in parallel; when the proposal matches the target distribution, multiple tokens can be committed per iteration. Importantly, with rejection sampling, speculative decoding preserves the exact output distribution of the target model~\cite{decoding_speculative}.
+Speculative decoding mitigates this bottleneck by separating \emph{proposal} and \emph{verification}~\cite{leviathan2023fast}. A lightweight draft model proposes candidate tokens and the target model verifies them in parallel; when verification succeeds, multiple tokens are committed per iteration. With rejection sampling, speculative decoding preserves the exact output distribution of the target model~\cite{decoding_speculative}.
 
-In practice, most speculative decoding systems employ \emph{linear} drafting: the draft model proposes a single chain of $K$ tokens. This design is brittle under draft--target mismatch. A rejection at an early position forces all subsequent drafted tokens to be discarded, wasting both draft computation and target-model verification work. This single-path exploration fundamentally limits achievable speedups, as the system cannot recover from early errors without restarting the drafting process~\cite{decoding_speculative}.
+Most deployed speculative decoders are \emph{linear}: the draft model proposes a single chain of \(K\) tokens. This design is brittle under draft--target mismatch: a rejection at an early position discards all downstream draft tokens, wasting both draft computation and target-model verification work~\cite{decoding_speculative}. Tree-based speculation offers a natural remedy by exploring multiple continuations in parallel and verifying a token tree with a structured attention mask, increasing the probability that at least one branch matches the target model's greedy continuation~\cite{specinfer,opt_tree}.
 
-Tree-based speculation offers a natural remedy. When multiple plausible next tokens compete, exploring several continuations in parallel increases the chance that at least one path aligns with the target model, thereby improving the expected number of accepted tokens per verification step. The draft expands multiple candidates via top-$k$ branching, and the target verifies the resulting token tree in parallel with a structured, causality-preserving attention mask. This multi-path exploration addresses the fundamental brittleness of linear drafting.
+However, existing tree-based approaches typically employ \emph{fixed} tree shapes with predetermined depth and branching factor~\cite{specinfer,medusa}. A fixed structure cannot adapt to varying draft confidence across contexts: it may over-explore when the draft distribution is peaked, and under-explore when the next-token distribution is flat, creating an \emph{efficiency gap}. Recent adaptive methods adjust draft length or verification thresholds~\cite{cm_asd,adaeagle,cas_spec}, but most focus on linear speculation rather than restructuring the tree itself.
 
-While tree-based drafting addresses the single-path limitation of linear methods, existing approaches typically employ \emph{fixed} tree configurations with predetermined depth and branching factor~\cite{specinfer,medusa}. This rigid structure cannot adapt to the draft model's varying prediction confidence, creating an \emph{efficiency gap}: high-confidence predictions waste compute exploring unnecessary branches, while uncertain predictions suffer from insufficient exploration. Recent adaptive methods~\cite{cm_asd,adaeagle,cas_spec} adjust draft length or employ learned predictors, yet most focus on linear speculation rather than fundamentally restructuring the tree itself. We hypothesize that \emph{confidence-aware} tree construction---dynamically adjusting branching per node based on draft uncertainty---can bridge this gap while maintaining robust exploration.
-
-We present \textbf{DynaTree}, which addresses the efficiency gap through confidence-aware adaptive branching that dynamically adjusts tree structure based on draft model uncertainty. Our three-phase mechanism adapts per-node branching (1--3 branches), implements dynamic depth control via early stopping and deep expansion, and tunes parameters based on recent verification outcomes. Combined with probability-threshold pruning under an explicit node budget, DynaTree verifies candidate paths in a single forward pass using tree attention. Empirically, DynaTree achieves 218.5~tokens/s on WikiText-2 (1.65$\times$ speedup), outperforming a fixed-tree baseline by 16.2\%.
+We propose \textbf{DynaTree}, a training-free tree speculative decoder that constructs a draft token tree with \emph{confidence-aware} adaptive breadth and depth under an explicit node budget. DynaTree (i) adjusts per-node branching based on draft confidence, (ii) dynamically gates depth via early stopping and selective deep expansion, and (iii) applies a lightweight history-based adjustment of a small parameter subset to stabilize verification efficiency across iterations. Using tree attention, all drafted nodes are verified in a single target-model forward pass. Empirically, DynaTree improves throughput over autoregressive decoding, linear speculation, and tuned fixed-tree baselines on both WikiText-2 and PG-19 (Table~\ref{tab:main-results}).
 
 In summary, our contributions are:
 \begin{itemize}
-  \item We propose a tree-based speculative decoding framework with \textbf{confidence-aware adaptive branching} that dynamically adjusts tree structure based on draft model uncertainty, directly addressing the efficiency gap in static configurations.
+  \item We propose \textbf{DynaTree}, a training-free tree speculative decoding framework that adaptively allocates verification budget via confidence-aware adjustments to tree breadth and depth under an explicit node budget.
   
-  \item We introduce a three-phase adaptive mechanism combining confidence-based branching, dynamic depth control, and historical parameter tuning. Our ablation study reveals that dynamic depth contributes most to performance gains.
+  \item We introduce a lightweight three-component adaptation mechanism (dynamic breadth, dynamic depth, and history adaptation) that integrates with tree-attention verification and probability-threshold pruning.
   
-  \item Experiments demonstrate that DynaTree improves throughput over autoregressive decoding, linear speculative decoding, and a fixed-tree baseline across WikiText-2 and PG-19, with a 1.65$\times$ speedup on WikiText-2 at \(T=1500\).
+  \item Experiments on WikiText-2 and PG-19 demonstrate consistent throughput and latency improvements over autoregressive decoding, linear speculative decoding, and tuned fixed-tree baselines, with up to 1.70$\times$ speedup at \(T=1500\).
 \end{itemize}
 
 \begin{figure}[tbp]
@@ -145,17 +143,17 @@ In summary, our contributions are:
 
 \subsection{Speculative Decoding}
 
-Speculative decoding accelerates autoregressive generation by decoupling \emph{proposal} and \emph{verification}: a lightweight draft model proposes multiple tokens, and the target model verifies these candidates in parallel while preserving the exact output distribution~\cite{leviathan2023fast,decoding_speculative,draft_tradeoff}. The memory-bound nature of LLM inference (approximately 1 FLOP/byte operational intensity) makes parallel verification particularly valuable~\cite{flashattention,vllm}. Recent work highlights robustness challenges across heterogeneous workloads and long-context inputs~\cite{spin,owl,judge_decoding} as well as practical serving constraints in production-scale deployments~\cite{arxiv_2508_08192}, but the dominant \emph{linear} drafting paradigm suffers from a fundamental inefficiency: when early tokens are rejected, all downstream draft tokens are discarded, wasting computation.
+Speculative decoding improves generation efficiency by verifying draft proposals in parallel while preserving target-model correctness~\cite{leviathan2023fast,decoding_speculative,draft_tradeoff}. Systems work highlights that decoding performance is often memory-bound and sensitive to batching, context length, and workload heterogeneity~\cite{flashattention,vllm,spin,owl}. Recent studies further emphasize serving-oriented considerations for speculative decoding under realistic deployment constraints~\cite{arxiv_2508_08192,judge_decoding}.
 
 \subsection{Tree-Based Speculative Decoding}
 
-To overcome single-path inefficiency, tree-based methods draft multiple candidate continuations and verify them in one target-model forward pass using structured attention masks~\cite{specinfer,opt_tree,medusa,traversal_verification}. SpecInfer~\cite{specinfer} pioneered token tree verification with expansion-based and merge-based construction mechanisms. OPT-Tree~\cite{opt_tree} algorithmically searches for tree structures that maximize expected acceptance length, while Medusa~\cite{medusa} augments models with multiple decoding heads to eliminate separate draft models. However, these methods predominantly use \emph{fixed} tree configurations with static depth $D$ and branching factor $B$, creating an efficiency gap when draft confidence varies~\cite{specinfer,medusa}.
+Tree-based speculative decoding generalizes linear drafting by verifying a token tree with a structured attention mask in a single target-model pass~\cite{specinfer,opt_tree,medusa,traversal_verification}. SpecInfer~\cite{specinfer} pioneered practical token-tree verification mechanisms, while OPT-Tree~\cite{opt_tree} searches for draft tree structures that improve the expected committed prefix length. Medusa~\cite{medusa} explores multi-token prediction via additional decoding heads. These approaches typically employ fixed tree structures, which motivates adaptive policies that allocate verification budget based on context-dependent uncertainty.
 
-Recent adaptive approaches address this rigidity through dynamic parameter adjustment. CM-ASD~\cite{cm_asd} modulates drafting length and verification thresholds based on entropy, logit margin, and softmax margin, achieving 4--5$\times$ speedups. AdaEAGLE~\cite{adaeagle} employs a lightweight MLP to predict optimal draft length per iteration. CAS-Spec~\cite{cas_spec} introduces dynamic tree cascades with acceptance rate heuristics, improving throughput by 47\%. While promising, these methods focus on linear speculation or require learned predictors. In contrast, DynaTree directly restructures trees via confidence-aware branching, dynamic depth control, and history-based adjustment, yielding a 16.2\% throughput gain over a fixed-tree baseline in our setup while remaining training-free.
+Adaptive speculative decoding modulates drafting aggressiveness using confidence signals or learned predictors~\cite{cm_asd,adaeagle,cas_spec}. In contrast to adaptive \emph{length}-only policies, DynaTree adapts the tree structure itself by jointly controlling breadth and depth and incorporating lightweight history-based adjustment, while remaining training-free.
 
 \subsection{Dynamic Pruning Strategies}
 
-Exponential candidate growth necessitates pruning to balance exploration and verification cost. ProPD~\cite{propd} employs top-$k$ early prediction heads and weighted regression to remove low-utility branches, reducing computation by 2$\times$. CAST~\cite{cast} formalizes cost-aware breadth and depth pruning, explicitly modeling verification overhead per layer. DySpec~\cite{dyspec} uses greedy confidence-guided expansion, while RASD~\cite{rasd} prunes retrieval candidates outside the draft model's top-$k$ predictions. AdaSD~\cite{adasd} introduces hyperparameter-free thresholds based on entropy and Jensen-Shannon distance, achieving 49\% speedups. Complementary lines of work adapt speculative hyperparameters online~\cite{arxiv_2505_15141} and explore alternative parallel decoding schemes beyond a single draft--verify pair~\cite{arxiv_2402_15678,arxiv_2410_13344}. DynaTree adopts probability-threshold pruning with explicit node budgets, prioritizing simplicity and training-free integration while maintaining strong empirical performance.
+Exponential candidate growth necessitates pruning to balance exploration against verification cost. Prior work studies early pruning and confidence-guided expansion~\cite{propd,dyspec}, cost-aware tree construction and pruning~\cite{cast,opt_tree}, and retrieval-augmented pruning heuristics~\cite{rasd}. Other lines of work adapt speculative hyperparameters online~\cite{arxiv_2505_15141} or propose alternative parallel decoding schemes beyond a single draft--verify pair~\cite{arxiv_2402_15678,arxiv_2410_13344}. DynaTree adopts probability-threshold pruning under an explicit node budget and focuses on training-free, confidence-aware tree restructuring.
 
 
 \section{Methodology}
